{
  "version": 4,
  "terraform_version": "1.14.3",
  "serial": 11,
  "lineage": "10caefda-2d98-6c48-b035-878b0706db76",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "aws_elastic_ip",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0c4701b981b9defa7",
            "arn": "arn:aws:ec2:eu-central-1:784576455136:elastic-ip/eipalloc-0c4701b981b9defa7",
            "domain": "vpc",
            "id": "eipalloc-0c4701b981b9defa7",
            "network_border_group": "eu-central-1",
            "public_dns": "ec2-3-78-210-38.eu-central-1.compute.amazonaws.com",
            "public_ip": "3.78.210.38",
            "public_ipv4_pool": "amazon",
            "region": "eu-central-1",
            "tags": {
              "Name": "DevOpsElasticIP"
            },
            "tags_all": {
              "Name": "DevOpsElasticIP"
            }
          },
          "identity_schema_version": 0
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "internet_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:784576455136:internet-gateway/igw-05386cda8322b2a81",
            "id": "igw-05386cda8322b2a81",
            "owner_id": "784576455136",
            "region": "eu-central-1",
            "tags": {
              "Name": "DevOpsInternetGateway"
            },
            "tags_all": {
              "Name": "DevOpsInternetGateway"
            },
            "vpc_id": "vpc-01cece5f37c6c0fb4"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.devops_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "nat_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0c4701b981b9defa7",
            "association_id": "eipassoc-091eea8568348425a",
            "availability_mode": "zonal",
            "connectivity_type": "public",
            "id": "nat-08daa87f98a199a25",
            "network_interface_id": "eni-0356da852d764afaa",
            "private_ip": "10.0.1.105",
            "public_ip": "3.78.210.38",
            "region": "eu-central-1",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-0654a7e9183177a45",
            "tags": {
              "Name": "DevOpsNATGateway"
            },
            "tags_all": {
              "Name": "DevOpsNATGateway"
            },
            "vpc_id": "vpc-01cece5f37c6c0fb4"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_eip.aws_elastic_ip",
            "aws_subnet.public",
            "aws_vpc.devops_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private_route_table",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:784576455136:route-table/rtb-005a050febde2c4e3",
            "id": "rtb-005a050febde2c4e3",
            "owner_id": "784576455136",
            "propagating_vgws": [],
            "region": "eu-central-1",
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "10.2.0.0/24",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-08daa87f98a199a25",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "DevOpsPrivateRouteTable"
            },
            "tags_all": {
              "Name": "DevOpsPrivateRouteTable"
            },
            "timeouts": null,
            "vpc_id": "vpc-01cece5f37c6c0fb4"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "784576455136",
            "id": "rtb-005a050febde2c4e3",
            "region": "eu-central-1"
          },
          "dependencies": [
            "aws_eip.aws_elastic_ip",
            "aws_nat_gateway.nat_gateway",
            "aws_subnet.public",
            "aws_vpc.devops_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public_route_table",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:784576455136:route-table/rtb-030a7c70dc511270b",
            "id": "rtb-030a7c70dc511270b",
            "owner_id": "784576455136",
            "propagating_vgws": [],
            "region": "eu-central-1",
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-05386cda8322b2a81",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "DevOpsPublicRouteTable"
            },
            "tags_all": {
              "Name": "DevOpsPublicRouteTable"
            },
            "timeouts": null,
            "vpc_id": "vpc-01cece5f37c6c0fb4"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "784576455136",
            "id": "rtb-030a7c70dc511270b",
            "region": "eu-central-1"
          },
          "dependencies": [
            "aws_internet_gateway.internet_gateway",
            "aws_vpc.devops_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0cf3c8c4270e0db7f",
            "region": "eu-central-1",
            "route_table_id": "rtb-030a7c70dc511270b",
            "subnet_id": "subnet-0654a7e9183177a45"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.internet_gateway",
            "aws_route_table.public_route_table",
            "aws_subnet.public",
            "aws_vpc.devops_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:784576455136:subnet/subnet-0044ec2d74d0541ff",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-central-1a",
            "availability_zone_id": "euc1-az2",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0044ec2d74d0541ff",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "784576455136",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "eu-central-1",
            "tags": {
              "Name": "DevOpsPrivateSubnet"
            },
            "tags_all": {
              "Name": "DevOpsPrivateSubnet"
            },
            "vpc_id": "vpc-01cece5f37c6c0fb4"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "784576455136",
            "id": "subnet-0044ec2d74d0541ff",
            "region": "eu-central-1"
          },
          "dependencies": [
            "aws_vpc.devops_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:784576455136:subnet/subnet-0654a7e9183177a45",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-central-1a",
            "availability_zone_id": "euc1-az2",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0654a7e9183177a45",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "784576455136",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "eu-central-1",
            "tags": {
              "Name": "DevOpsPublicSubnet"
            },
            "tags_all": {
              "Name": "DevOpsPublicSubnet"
            },
            "vpc_id": "vpc-01cece5f37c6c0fb4"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "784576455136",
            "id": "subnet-0654a7e9183177a45",
            "region": "eu-central-1"
          },
          "dependencies": [
            "aws_vpc.devops_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "devops_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:784576455136:vpc/vpc-01cece5f37c6c0fb4",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-05c166f75e0f88279",
            "default_route_table_id": "rtb-0a254593ade05caff",
            "default_security_group_id": "sg-0111e070653abab03",
            "dhcp_options_id": "dopt-008f9545ce84fa9fb",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-01cece5f37c6c0fb4",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0a254593ade05caff",
            "owner_id": "784576455136",
            "region": "eu-central-1",
            "tags": {
              "Name": "DevOpsVPC"
            },
            "tags_all": {
              "Name": "DevOpsVPC"
            }
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "784576455136",
            "id": "vpc-01cece5f37c6c0fb4",
            "region": "eu-central-1"
          }
        }
      ]
    }
  ]
}